<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/nav_search"
        android:title="@string/nav_search"
        android:icon="@drawable/ic_search" />
    <item
        android:id="@+id/nav_favorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/ic_favorite" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings" />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_profile" />
</menu>
